# python_monorepo_msa_grpc

./: .gitignore  README.md  pyproject.toml
services/api_service/: pyproject.toml
services/api_service/api_service/: app.py
services/math_service/: pyproject.toml
services/math_service/math_service/: server.py
services/math_service/math_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/shared_protos/: pyproject.toml
services/shared_protos/shared_protos/: math.proto  math_pb2.py  math_pb2_grpc.py
services/shared_protos/shared_protos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
