[project]
name = "api_service"
version = "0.1.0"
description = "FastAPI gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.66",
    "shared_protos",
]

# uv에게 'shared_protos'는 워크스페이스에서 가져오라고 지정
[tool.uv.sources]
shared_protos  = { workspace = true }